[metadata]
name = lhs-accounting-tools
version = 1.0

[options]
packages = lhs_accounting_tools, lhs_accounting_tools.scripts
install_requires =
    click >= 8.0.0
    ofxtools >= 0.9.4
    more_itertools >= 8.7.0
    gocardless_pro >= 1.26.0

[options.entry_points]
console_scripts = 
	lhs-ofx-summarise = lhs_accounting_tools.scripts.ofx_summarise:main
	lhs-gocardless-journals = lhs_accounting_tools.scripts.gocardless_journals:main
